[package]
name = "rckt"
version = "0.1.0"
authors = ["bajpai244 <bajpaiharsh244@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harsh = "0.2.2"
rand = "0.8.4"
redis = "0.21.4"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
rusqlite = { version = "0.24.1", features = ["bundled"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
url = "2.2.2"
